# Idk

./: .replit  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
modules/auth/: __init__.py  login.py  register.py  routes.py  welcome_user.py
modules/backoffice/: __init__.py  dashboard.py
modules/chat/: __init__.py  index.py  routes.py
modules/improve/: __init__.py  help_us_improve.py
modules/personal_growth/: __init__.py  personal_growth.py
modules/reports/: __init__.py  active_reports.py  new_report.py  notification.py  routes.py
modules/values/: __init__.py  values.py
static/: auth.js  chat.js  dashboard.js  script.js  style.css
templates/: backofficeDashboard.html  settings.html  welcome.html
templates/auth/: login.html  register.html  welcome_user.html
templates/base/: base.html
templates/chat/: index.html
templates/improve/: help_us_improve.html
templates/personal_growth/: personal_growth.html
templates/reports/: active_reports.html  new_report.html  new_report_exist.html  notification.html
templates/values/: values.html
