[tool.poetry]
name = "my-flask-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
flask = "^3.0.0"
sqlalchemy = "^1.4"
flask-sqlalchemy = "^2.5"
werkzeug = ">=3.0.0"
openai = "^0.28"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.core.masonry.api"